Actualizar index.html
Arreglo de la posición de las imágenes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2>Categorías</h2>
             <div class="categoria-grid">
                 <div class="categoria-card">
-                    <img src="Assets/IMG/categoria.jpg" alt="Comida Rápida">
+                    <img src="Assets/IMG/categoria2.jpg" alt="Comida Rápida">
                     <h5>Comida Rápida</h5>
                     <p>Hamburguesas, papas fritas y más.</p>
                     <a href="#" class="btn">Ver más</a>
@@ -52,7 +52,7 @@
                     <a href="#" class="btn">Ver más</a>
                 </div>
                 <div class="categoria-card">
-                    <img src="Assets/IMG/categoria2.jpg" alt="Sushi">
+                    <img src="Assets/IMG/categoria.jpg" alt="Sushi">
                     <h5>Sushi</h5>
                     <p>Fresco y delicioso sushi a tu gusto.</p>
                     <a href="#" class="btn">Ver más</a>
